--- a/package.json
+++ b/package.json
@@ -13,16 +13,17 @@
   "dependencies": {
     "angular2-moment": "^1.4.0",
     "rxjs": "^5.4.2",
-    "zone.js": "^0.8.13"
-  },
-  "devDependencies": {
+    "zone.js": "^0.8.13",
     "@angular/core": "4.4.5",
     "@angular/forms": "4.4.5",
     "@angular/http": "4.4.5",
+    "@angular/router": "4.4.5",
+    "@angular/cdk": "2.0.0-beta.12",
+    "@angular/material": "2.0.0-beta.12"
+  },
+  "devDependencies": {
     "@angular/animations": "4.4.5",
     "@angular/common": "4.4.5",
-    "@angular/cdk": "2.0.0-beta.12",
-    "@angular/material": "2.0.0-beta.12",
     "@angular/compiler": "4.4.5",
     "@angular/platform-browser": "4.4.5",
     "@types/node": "^8.0.11",
