--- a/package.json
+++ b/package.json
@@ -2,8 +2,9 @@
   "name": "@cloudinn/ng-crud-ui",
   "version": "1.0.0",
   "description": "An angular module for common admin panels components and crud operations",
+  "main": "index.ts",
   "scripts": {
-    "build": "tsc src",
+    "build": "tsc -p src",
     "test": "npm test"
   },
   "repository": {
@@ -11,21 +12,21 @@
     "url": "git+https://github.com/cloudinn/ng-crud-ui.git"
   },
   "dependencies": {
-    "angular2-moment": "^1.4.0",
     "rxjs": "^5.4.2",
-    "zone.js": "^0.8.13",
+    "zone.js": "^0.8.13"
+  },
+  "devDependencies": {
+    "@angular/common": "4.4.5",
+    "angular2-moment": "^1.4.0",
     "@angular/core": "4.4.5",
     "@angular/forms": "4.4.5",
     "@angular/http": "4.4.5",
     "@angular/router": "4.4.5",
-    "@angular/cdk": "2.0.0-beta.12",
-    "@angular/material": "2.0.0-beta.12"
-  },
-  "devDependencies": {
     "@angular/animations": "4.4.5",
-    "@angular/common": "4.4.5",
     "@angular/compiler": "4.4.5",
     "@angular/platform-browser": "4.4.5",
+    "@angular/cdk": "2.0.0-beta.12",
+    "@angular/material": "2.0.0-beta.12",
     "@types/node": "^8.0.11",
     "codelyzer": "~2.0.0",
     "ts-node": "~2.0.0",
