--- a/package.json
+++ b/package.json
@@ -2,9 +2,8 @@
   "name": "@cloudinn/ng-crud-ui",
   "version": "2.0.0",
   "description": "An angular module for common admin panels components and crud operations",
-  "main": "index.ts",
   "scripts": {
-    "build": "tsc -p src",
+    "build": "tsc --p src/tsconfig.json",
     "test": "npm test"
   },
   "repository": {
@@ -12,21 +11,22 @@
     "url": "git+https://github.com/cloudinn/ng-crud-ui.git"
   },
   "dependencies": {
-    "rxjs": "^5.4.2",
-    "zone.js": "^0.8.13"
-  },
-  "devDependencies": {
-    "@angular/common": "4.4.5",
-    "angular2-moment": "^1.4.0",
-    "@angular/core": "4.4.5",
-    "@angular/forms": "4.4.5",
-    "@angular/http": "4.4.5",
-    "@angular/router": "4.4.5",
-    "@angular/animations": "4.4.5",
-    "@angular/compiler": "4.4.5",
-    "@angular/platform-browser": "4.4.5",
+    "@angular/common": ">=4.4.5",
+    "@angular/core": ">=4.4.5",
+    "@angular/forms": ">=4.4.5",
+    "@angular/http": ">=4.4.5",
+    "@angular/router": ">=4.4.5",
+    "@angular/animations": ">=4.4.5",
+    "@angular/compiler": ">=4.4.5",
+    "@angular/platform-browser": ">=4.4.5",
+    "@angular/platform-browser-dynamic": ">=4.4.5",
     "@angular/cdk": "2.0.0-beta.12",
     "@angular/material": "2.0.0-beta.12",
+    "angular2-moment": "^1.4.0",
+    "rxjs": ">=5.1.0",
+    "zone.js": ">=0.8.13"
+  },
+  "devDependencies": {
     "@types/node": "^8.0.11",
     "codelyzer": "~2.0.0",
     "ts-node": "~2.0.0",
@@ -36,6 +36,9 @@
   "keywords": [
     "angular",
     "admin",
+    "CRUD",
+    "REST",
+    "api",
     "extadmin",
     "components",
     "modules",
