--- a/package.json
+++ b/package.json
@@ -2,9 +2,8 @@
   "name": "@cloudinn/ng-crud-ui",
   "version": "2.0.0",
   "description": "An angular module for common admin panels components and crud operations",
-  "main": "index.ts",
   "scripts": {
-    "build": "ng -p src",
+    "build": "ngc -p src",
     "test": "npm test"
   },
   "repository": {
@@ -12,27 +11,30 @@
     "url": "git+https://github.com/cloudinn/ng-crud-ui.git"
   },
   "peerDependencies": {
-    "@angular/core": ">=4.4.5"    
+    "@angular/core": ">=5.0.0",
+    "@angular/platform-browser": ">=5.0.0",
+    "@angular/platform-browser-dynamic": ">=5.0.0"
   },
   "dependencies": {
-    "@angular/common": ">=4.4.5",
-    "@angular/forms": ">=4.4.5",
-    "@angular/http": ">=4.4.5",
-    "@angular/router": ">=4.4.5",
-    "@angular/animations": ">=4.4.5",
-    "@angular/platform-browser": ">=4.4.5",
-    "@angular/platform-browser-dynamic": ">=4.4.5",
-    "@angular/cdk": ">=2.0.0-beta.12",
-    "@angular/material": ">=2.0.0-beta.12",
-    "angular2-moment": ">=1.4.0",
-    "rxjs": ">=5.1.0",
-    "zone.js": ">=0.8.13"
+    "@angular/animations": ">=5.0.0",
+    "@angular/cdk": "^5.0.0-rc.1",
+    "@angular/common": ">=5.0.0",
+    "@angular/core": "^5.0.2",
+    "@angular/forms": ">=5.0.0",
+    "@angular/http": ">=5.0.0",
+    "@angular/material": "^5.0.0-rc.1",
+    "@angular/platform-browser": "^5.0.2",
+    "@angular/router": ">=5.0.0",
+    "angular2-moment": ">=1.4.0"
   },
   "devDependencies": {
-    "@angular/compiler": ">=4.4.5",    
+    "rxjs": ">=5.1.0",
+    "zone.js": ">=0.8.13",
+    "@angular/cli": ">=1.5.0",
+    "@angular/compiler": ">=5.0.0",
     "@angular/compiler-cli": ">=5.0.2",
     "@types/node": ">=8.0.11",
-    "codelyzer": ">=2.0.0",
+    "codelyzer": ">=3.2.2",
     "ts-node": ">=3.2.0",
     "tslint": ">=4.5.0",
     "typescript": ">=2.4.0"
