--- a/package.json
+++ b/package.json
@@ -11,30 +11,36 @@
     "url": "git+https://github.com/cloudinn/ng-crud-ui.git"
   },
   "peerDependencies": {
-    "@angular/core": ">=5.0.0",
-    "@angular/platform-browser": ">=5.0.0",
-    "@angular/platform-browser-dynamic": ">=5.0.0"
-  },
-  "dependencies": {
-    "@angular/animations": ">=5.0.0",
-    "@angular/cdk": "^5.0.0-rc.1",
-    "@angular/common": ">=5.0.0",
     "@angular/core": "^5.0.2",
+    "@angular/platform-browser": "^5.0.2",
+    "@angular/platform-browser-dynamic": ">=5.0.0",
+    "@angular/animations": ">=5.0.0",
+    "@angular/cdk": ">=5.1.0",
+    "@angular/common": ">=5.0.0",
     "@angular/forms": ">=5.0.0",
     "@angular/http": ">=5.0.0",
-    "@angular/material": "^5.0.0-rc.1",
-    "@angular/platform-browser": "^5.0.2",
+    "@angular/material": ">=5.1.0",
     "@angular/router": ">=5.0.0",
     "angular2-moment": ">=1.4.0"
   },
   "devDependencies": {
+    "@angular/core": "^5.0.2",
+    "@angular/platform-browser": "^5.0.2",
+    "@angular/platform-browser-dynamic": ">=5.0.0",
+    "@angular/animations": ">=5.0.0",
+    "@angular/cdk": ">=5.1.0",
+    "@angular/common": ">=5.0.0",
+    "@angular/forms": ">=5.0.0",
+    "@angular/http": ">=5.0.0",
+    "@angular/material": ">=5.1.0",
+    "@angular/router": ">=5.0.0",
+    "angular2-moment": ">=1.4.0",
     "rxjs": ">=5.1.0",
     "zone.js": ">=0.8.13",
     "@angular/cli": ">=1.5.0",
     "@angular/compiler": ">=5.0.0",
     "@angular/compiler-cli": ">=5.0.2",
     "@types/node": ">=8.0.11",
-    "codelyzer": ">=3.2.2",
     "ts-node": ">=3.2.0",
     "tslint": ">=4.5.0",
     "typescript": ">=2.4.0"
@@ -59,5 +65,8 @@
   "bugs": {
     "url": "https://github.com/cloudinn/ng-crud-ui/issues"
   },
-  "homepage": "https://github.com/cloudinn/ng-crud-ui#readme"
+  "homepage": "https://github.com/cloudinn/ng-crud-ui#readme",
+  "dependencies": {
+    "ng-packagr": "^1.6.0"
+  }
 }
