--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compileOnSave": false,
   "compilerOptions": {
-    "outDir": "../dist/out-tsc",
+    "outDir": "./dist/out-tsc",
     "baseUrl": "src",
     "sourceMap": true,
     "declaration": false,
@@ -11,7 +11,7 @@
     "target": "es5",
     "types": ["node"],
     "typeRoots": [
-      "../node_modules/@types"
+      "./node_modules/@types"
     ],
     "lib": [
       "es2016",
