--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@angular/router": "^7.2.2",
     "core-js": "^2.6.3",
     "moment": "^2.24.0",
+    "ngx-markdown": "^7.1.3",
     "ngx-moment": "^3.3.0",
     "rxjs": "^6.4.0",
     "zone.js": "^0.8.29"
