Added base-href to docs build

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "build-docs": "ng build --prod docs --output-path ./docs"
+    "build-docs": "ng build --prod docs --output-path ./docs --base-href /ng-crud-ui"
   },
   "private": true,
   "dependencies": {
