--- a/projects/crud/package.json
+++ b/projects/crud/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "crud",
-  "version": "0.0.1",
+  "name": "ng-crud-ui",
+  "version": "1.0.4",
   "peerDependencies": {
     "@angular/common": "^6.0.0-rc.0 || ^6.0.0",
     "@angular/core": "^6.0.0-rc.0 || ^6.0.0",
