--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "e2e": "ng e2e",
     "build-docs": "ng build --prod docs --output-path ./docs --base-href /ng-crud-ui/ --deploy-url /ng-crud-ui/"
   },
-  "private": false,
+  "private": true,
   "dependencies": {
     "@angular/animations": "^7.2.2",
     "@angular/cdk": "^7.3.0",
