--- a/package.json
+++ b/package.json
@@ -23,8 +23,10 @@
     "@angular/platform-browser": "^7.2.2",
     "@angular/platform-browser-dynamic": "^7.2.2",
     "@angular/router": "^7.2.2",
+    "@nguniversal/express-engine": "^8.2.6",
     "core-js": "^2.6.3",
     "moment": "^2.24.0",
+    "ngx-cookie": "^4.1.2",
     "ngx-markdown": "^7.1.3",
     "ngx-moment": "^3.3.0",
     "rxjs": "^6.4.0",
