--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "ngx-cookie": "^4.1.2",
     "ngx-markdown": "^7.1.3",
     "ngx-moment": "^3.3.0",
+    "node-sass": "^4.12.0",
     "rxjs": "^6.4.0",
     "zone.js": "^0.8.29"
   },
