--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@angular/common": "^7.2.2",
     "@angular/compiler": "^7.2.2",
     "@angular/core": "^7.2.2",
+    "@angular/flex-layout": "^9.0.0-beta.29",
     "@angular/forms": "^7.2.2",
     "@angular/http": "^7.2.2",
     "@angular/material": "^7.3.0",
@@ -24,11 +25,12 @@
     "@angular/platform-browser-dynamic": "^7.2.2",
     "@angular/router": "^7.2.2",
     "@nguniversal/express-engine": "^8.2.6",
+    "amazing-time-picker": "^1.8.0",
     "core-js": "^2.6.3",
     "moment": "^2.24.0",
+    "ng-pick-datetime": "^7.0.0",
     "ngx-cookie": "^4.1.2",
     "ngx-markdown": "^7.1.3",
-    "ngx-moment": "^3.3.0",
     "node-sass": "^4.12.0",
     "rxjs": "^6.4.0",
     "zone.js": "^0.8.29"
