--- a/package.json
+++ b/package.json
@@ -1,63 +1,63 @@
 {
-  "name": "ng-crud-ui",
-  "version": "0.0.0",
-  "scripts": {
-    "ng": "ng",
-    "start": "ng serve --proxy-config proxy_conf.json",
-    "build": "ng build",
-    "test": "ng test",
-    "lint": " ng lint --type-check",
-    "e2e": "ng e2e",
-    "build-docs": "ng build --prod docs --output-path ./docs --base-href /ng-crud-ui/ --deploy-url /ng-crud-ui/"
-  },
-  "private": true,
-  "dependencies": {
-    "@angular/animations": "^7.2.2",
-    "@angular/cdk": "^7.3.0",
-    "@angular/common": "^7.2.2",
-    "@angular/compiler": "^7.2.2",
-    "@angular/core": "^7.2.2",
-    "@angular/flex-layout": "^9.0.0-beta.29",
-    "@angular/forms": "^7.2.2",
-    "@angular/http": "^7.2.2",
-    "@angular/material": "^7.3.0",
-    "@angular/platform-browser": "^7.2.2",
-    "@angular/platform-browser-dynamic": "^7.2.2",
-    "@angular/router": "^7.2.2",
-    "@nguniversal/express-engine": "^8.2.6",
-    "amazing-time-picker": "^1.8.0",
-    "core-js": "^2.6.3",
-    "moment": "^2.24.0",
-    "ng-pick-datetime": "^7.0.0",
-    "ngx-cookie": "^4.1.2",
-    "ngx-markdown": "^7.1.3",
-    "node-sass": "^4.13.1",
-    "rxjs": "^6.4.0",
-    "zone.js": "^0.8.29"
-  },
-  "devDependencies": {
-    "@angular-devkit/build-angular": "~0.12.3",
-    "@angular-devkit/build-ng-packagr": "~0.12.3",
-    "@angular/cli": "~7.2.3",
-    "@angular/compiler-cli": "^7.2.2",
-    "@angular/language-service": "^7.2.2",
-    "@types/jasmine": "~3.3.8",
-    "@types/jasminewd2": "^2.0.6",
-    "@types/node": "~10.12.19",
-    "codelyzer": "~4.5.0",
-    "jasmine-core": "~3.3.0",
-    "jasmine-spec-reporter": "~4.2.1",
-    "karma": "~4.0.0",
-    "karma-chrome-launcher": "~2.2.0",
-    "karma-coverage-istanbul-reporter": "~2.0.4",
-    "karma-jasmine": "~2.0.1",
-    "karma-jasmine-html-reporter": "^1.4.0",
-    "ng-packagr": "^4.7.0",
-    "protractor": "~5.4.2",
-    "ts-node": "~8.0.2",
-    "tsickle": ">=0.34.0",
-    "tslib": "^1.7.1",
-    "tslint": "~5.12.1",
-    "typescript": "~3.2.4"
-  }
+    "name": "ng-crud-ui",
+    "version": "0.0.0",
+    "scripts": {
+        "ng": "ng",
+        "start": "ng serve --proxy-config proxy_conf.json",
+        "build": "ng build",
+        "test": "ng test",
+        "lint": " ng lint --type-check",
+        "e2e": "ng e2e",
+        "build-docs": "ng build --prod docs --output-path ./docs --base-href /ng-crud-ui/ --deploy-url /ng-crud-ui/"
+    },
+    "private": true,
+    "dependencies": {
+        "@angular/animations": "^9.1.12",
+        "@angular/cdk": "^8.2.3",
+        "@angular/common": "^9.1.12",
+        "@angular/compiler": "^9.1.12",
+        "@angular/core": "^9.1.12",
+        "@angular/flex-layout": "^9.0.0-beta.29",
+        "@angular/forms": "^9.1.12",
+        "@angular/material": "^8.2.3",
+        "@angular/platform-browser": "^9.1.12",
+        "@angular/platform-browser-dynamic": "^9.1.12",
+        "@angular/router": "^9.1.12",
+        "@nguniversal/express-engine": "^8.2.6",
+        "@rollup/plugin-commonjs": "^17.0.0",
+        "@rollup/plugin-json": "^4.1.0",
+        "@rollup/plugin-node-resolve": "^11.0.0",
+        "amazing-time-picker": "^1.8.0",
+        "moment": "^2.24.0",
+        "ng-pick-datetime": "^7.0.0",
+        "ngx-cookie": "^4.1.2",
+        "rxjs": "^6.6.3",
+        "zone.js": "^0.10.3"
+    },
+    "devDependencies": {
+        "@angular-devkit/build-angular": "~0.803.29",
+        "@angular-devkit/build-ng-packagr": "~0.803.29",
+        "@angular/cli": "~8.3.29",
+        "@angular/compiler-cli": "^9.1.12",
+        "@angular/language-service": "^9.1.12",
+        "@types/jasmine": "~3.3.8",
+        "@types/jasminewd2": "^2.0.6",
+        "@types/node": "~10.12.19",
+        "codelyzer": "~4.5.0",
+        "jasmine-core": "~3.3.0",
+        "jasmine-spec-reporter": "~4.2.1",
+        "karma": "~4.0.0",
+        "karma-chrome-launcher": "~2.2.0",
+        "karma-coverage-istanbul-reporter": "~2.0.4",
+        "karma-jasmine": "~2.0.1",
+        "karma-jasmine-html-reporter": "^1.4.0",
+        "ng-packagr": "^5.7.1",
+        "node-sass": "^4.14.1",
+        "protractor": "~5.4.2",
+        "ts-node": "~8.0.2",
+        "tsickle": ">=0.34.0",
+        "tslib": "^1.14.1",
+        "tslint": "~5.12.1",
+        "typescript": "~3.8.3"
+    }
 }
