--- a/package.json
+++ b/package.json
@@ -32,18 +32,19 @@
     "ng-pick-datetime": "^7.0.0",
     "ngx-cookie": "^4.1.2",
     "rxjs": "^6.6.3",
-    "zone.js": "^0.10.3"
+    "tslib": "^1.10.0",
+    "zone.js": "~0.10.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.803.29",
-    "@angular-devkit/build-ng-packagr": "~0.803.29",
-    "@angular/cli": "~8.3.29",
+    "@angular-devkit/build-angular": "~0.901.12",
+    "@angular-devkit/build-ng-packagr": "~0.901.12",
+    "@angular/cli": "~9.1.12",
     "@angular/compiler-cli": "^9.1.12",
     "@angular/language-service": "^9.1.12",
     "@types/jasmine": "~3.3.8",
     "@types/jasminewd2": "^2.0.6",
-    "@types/node": "~10.12.19",
-    "codelyzer": "~4.5.0",
+    "@types/node": "^12.11.1",
+    "codelyzer": "^5.1.2",
     "jasmine-core": "~3.3.0",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~4.0.0",
@@ -51,12 +52,10 @@
     "karma-coverage-istanbul-reporter": "~2.0.4",
     "karma-jasmine": "~2.0.1",
     "karma-jasmine-html-reporter": "^1.4.0",
-    "ng-packagr": "^5.7.1",
+    "ng-packagr": "^9.0.0",
     "node-sass": "^4.14.1",
     "protractor": "~5.4.2",
     "ts-node": "~8.0.2",
-    "tsickle": ">=0.34.0",
-    "tslib": "^1.14.1",
     "tslint": "~5.12.1",
     "typescript": "~3.8.3"
   }
