upgrade to angular 11

--- a/package.json
+++ b/package.json
@@ -13,13 +13,13 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^11.0.4",
-    "@angular/cdk": "^8.2.3",
+    "@angular/cdk": "^11.0.2",
     "@angular/common": "^11.0.4",
     "@angular/compiler": "^11.0.4",
     "@angular/core": "^11.0.4",
-    "@angular/flex-layout": "^9.0.0-beta.29",
+    "@angular/flex-layout": "^11.0.0-beta.33",
     "@angular/forms": "^11.0.4",
-    "@angular/material": "^8.2.3",
+    "@angular/material": "^11.0.2",
     "@angular/platform-browser": "^11.0.4",
     "@angular/platform-browser-dynamic": "^11.0.4",
     "@angular/router": "^11.0.4",
@@ -28,9 +28,10 @@
     "@rollup/plugin-json": "^4.1.0",
     "@rollup/plugin-node-resolve": "^11.0.0",
     "amazing-time-picker": "^1.8.0",
-    "moment": "^2.24.0",
+    "moment": "^2.29.1",
     "ng-pick-datetime": "^7.0.0",
-    "ngx-cookie": "^4.1.2",
+    "ngx-cookie": "^5.0.0",
+    "ngx-markdown": "^11.0.1",
     "rxjs": "^6.6.3",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
