Change amazing time picker version as it conflicted with angular 12+

--- a/package.json
+++ b/package.json
@@ -26,12 +26,12 @@
         "@angular/platform-browser": "^11.0.4",
         "@angular/platform-browser-dynamic": "^11.0.4",
         "@angular/router": "^11.0.4",
+        "@jonijnm/amazing-time-picker": "^2.2.0",
         "@nguniversal/express-engine": "^11.0.1",
         "@ngx-translate/core": "^13.0.0",
         "@rollup/plugin-commonjs": "^17.0.0",
         "@rollup/plugin-json": "^4.1.0",
         "@rollup/plugin-node-resolve": "^11.0.0",
-        "amazing-time-picker": "^1.8.0",
         "mat-select-autocomplete-angular11": "^1.4.21",
         "moment": "^2.29.1",
         "ng-pick-datetime": "^7.0.0",
