--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
         "@angular/flex-layout": "^11.0.0-beta.33",
         "@angular/forms": "^11.0.4",
         "@angular/material": "^11.0.2",
+        "@angular/material-moment-adapter": "^11.0.3",
         "@angular/platform-browser": "^11.0.4",
         "@angular/platform-browser-dynamic": "^11.0.4",
         "@angular/router": "^11.0.4",
