--- a/package.json
+++ b/package.json
@@ -37,12 +37,12 @@
         "@angular/platform-browser": "^20.0.0",
         "@angular/platform-browser-dynamic": "^20.0.0",
         "@angular/router": "^20.0.0",
+        "@cloudinn/mat-select-autocomplete": "^2.0.0",
         "@jonijnm/amazing-time-picker": "^2.2.0",
         "@ngx-translate/core": "^15.0.0",
         "@rollup/plugin-commonjs": "^28.0.0",
         "@rollup/plugin-json": "^6.1.0",
         "@rollup/plugin-node-resolve": "^15.3.0",
-        "mat-select-autocomplete-angular19": "^1.5.39",
         "moment": "^2.30.1",
         "ngx-cookie-service": "^20.1.0",
         "ngx-markdown": "^20.0.0",
@@ -60,13 +60,13 @@
         "@types/node": "^12.11.1",
         "codelyzer": "^6.0.0",
         "eslint": "^9.0.0",
-        "jasmine-core": "~3.6.0",
-        "jasmine-spec-reporter": "~5.0.0",
-        "karma": "~5.0.0",
-        "karma-chrome-launcher": "~3.1.0",
-        "karma-coverage-istanbul-reporter": "~3.0.2",
-        "karma-jasmine": "~4.0.0",
-        "karma-jasmine-html-reporter": "^1.5.0",
+        "jasmine-core": "~5.5.0",
+        "jasmine-spec-reporter": "~7.0.0",
+        "karma": "~6.4.0",
+        "karma-chrome-launcher": "~3.2.0",
+        "karma-coverage": "~2.2.0",
+        "karma-jasmine": "~5.1.0",
+        "karma-jasmine-html-reporter": "~2.1.0",
         "ng-packagr": "^20.0.0",
         "protractor": "~7.0.0",
         "sass": "^1.83.0",
